# skola

./: .gitignore  README.md
.obsidian/: app.json  appearance.json  workspace.json
aj/: Ceska kuchyne.md  amerika.md
aj/.obsidian/: workspace.json
aj/maturitni otazky/: 2 MO AJ - Capitals of English-speaking countries.odt  3 MO AJ - The United Kingdom of Great Britain and Northern Ireland.odt  5 MO AJ - Czech Republic.odt  6 MO AJ - Prague.odt  7 MO AJ - Place where you live.odt  maturitni otazky 7 a 18.md
aj/priprava na maturitu/: london.md  otazky na ajinu.md  procvicovani.md  travelling & tourism.md  washington.md
cj/: cestina literatura.md  cestina mluvnice.md  priprava na pisemku.md  seznam literarnich del - pomucka.xlsx
cj/cetba/: Komedie o hrnci.odt  Lakomec.odt  Malý princ.odt  R.U.R..odt
cj/literatura/: 3. rocnik.md  4. rocnik.md
cj/mluvnice/: 4. rocnik.md
cj/procvicovani/: analyza textu.md  mluvnice pracovni list.md  otazky.md
cj2/: cestina literatura.md  cestina mluvnice.md
elm/4. rocnik/: BOZP.md
elm/thiele/: .~lock.vypocty2.ods#  vypocty.ods  vypocty2.ods  vypocty3.ods
mit/: .gitignore  README.md  templateM16.inc
mit/.includes/: chartab.inc  include.inc  lab_example_one.inc  template.inc  template2.inc  template3.inc  templateM16.inc
mit/3. rocnik/: templateM16.inc
pvp/rust/auth-server/: Cargo.toml  readme.md  tokens.sqlite3
pvp/rust/auth-server/src/: main.rs
spv/: Kultura.md  Nabozenstvi.md  Pracovni pravo.md
tvp/: .gitignore  pisemky.md  pisemky.txt  zapisky-05-03-24.md  zapisky-10-02-24.md  zapisky-22-02-24.md
(+3821 files in other folders)
