[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
